--- a/src/app/modules/travel/travel.view.my.history.template.html
+++ b/src/app/modules/travel/travel.view.my.history.template.html
@@ -80,7 +80,7 @@
                                 </div>
                             </div>
                             <div id="traveller-details" class="col s12 tab-content padding-zero">
-                                <div class="card-container padding-20 fixed-height-section">
+                                <div class="card-container padding-20">
                                     <div *ngIf="travelModel.travelDetails.travelType == 2" class="card white">
                                         <div class="card-edit">
                                             <div class="row heading-content">
