--- a/src/app/modules/travel/travel.view.request.template.html
+++ b/src/app/modules/travel/travel.view.request.template.html
@@ -842,7 +842,7 @@
                                                             <div class="col s12 l6 comments-section">
                                                                 <div class="">
                                                                     <h5 class="margin-zero p-left10">Comments</h5>
-                                                                    <div class="comments-scrollable">
+                                                                    <div class="comments-flight-scrollable">
                                                                         <div class="row m-top10">
                                                                             <div class="col s12">
                                                                                 <div class="user-comments right-arrow">
