--- a/src/app/modules/appraisals/appraiser.component.html
+++ b/src/app/modules/appraisals/appraiser.component.html
@@ -39,7 +39,7 @@
                                             <div class="app">Appraisee <br> {{appraiseeDetails.appraiseeName}} </div>
                                             <div class="app">Appraiser<br> {{appraiseeDetails.appraiserName}} </div>
                                             <div class="app">Reviewer<br> {{appraiseeDetails.reviewerName}} </div>
-                                            <div class="app">One-To-One<br> Chetan Jain</div>
+                                            <div class="app">One-To-One<br> {{appraiseeDetails.appraiserName}} </div>
                                         </div>
                                     </div>
                                 </div>
@@ -71,8 +71,8 @@
                                                 </div>
                                                 <div class="parameter-1" *ngFor="let parameter of appraiserParameterCollection">
                                                     <span class="parameter-heading">{{parameter.parameter}}</span>
-                                                    <div class="param-rating">
-                                                        <select materialize="material_select" [(ngModel)]="parameter.score">
+                                                    <div class="param-rating" *ngIf="!isApplied">
+                                                        <select materialize="material_select" [class.disabled]="isApplied==true" [(ngModel)]="parameter.score" class="rating-input content-breadth">
                                                             <option value="" disabled="" selected="">Select</option>                                  
                                                             <option value="1">1</option>
                                                             <option value="2">2</option>
@@ -81,13 +81,36 @@
                                                             <option value="5">5</option>
                                                         </select>
                                                     </div>
+                                                    <div class="param-rating" *ngIf="isApplied">
+                                                        <span class="appraiser-rating-val">{{parameter.score}}</span>
+                                                    </div>
                                                 </div>
-                                            </div>
-                                        </div>
-                                        <textarea class="materialize-textarea m-btm" style="height: 44px;" [(ngModel)]="appraiserComments" name="comments" id="comments" #comments="ngModel" required></textarea>
-                                        <div *ngIf="comments.errors && formSubmit==true" class="red">
-                                            <div [hidden]="!comments.errors.required">
-                                                Comment is required
+                                                <div class="parameter-1 appraiser-comment">
+                                                    <span class="parameter-heading">Appraiser's Comment</span>
+                                                </div>
+                                                <div class="col s12 m11 right-bar padding-zero">
+                                                    <div class="timeline-panel-appraisee comment-box">
+                                                        <div class="rating-comment">
+                                                             <textarea class="materialize-textarea m-btm" style="height: 44px;" [(ngModel)]="appraiserComments" name="comments" id="comments" #comments="ngModel" required></textarea>
+                                                            <div *ngIf="comments.errors && formSubmit==true" class="red">
+                                                                <div [hidden]="!comments.errors.required">
+                                                                    Comment is required
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col s12 m-top20">
+                                                    <div class="col s12">
+                                                        <p class="margin-zero promotion-check">
+                                                            <input type="checkbox" class="filled-in" id="promotion" [(ngModel)]="isPromotion">
+                                                            <label for="promotion">Promotion Recomended:</label>
+                                                        </p>
+                                                        <div class="input-field promotion-check">
+                                                            <input type="text" class="validate left" [(ngModel)]="promotionFor">
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -99,7 +122,7 @@
                         <div class="row valign-wrapper margin-zero">
                             <div class="col s12 m12 l6 right-align" *ngIf="!isApplied">
                                 <a href="#" class="waves-effect waves-light btn custom-btn cancel" title="Cancel">Cancel</a>
-                                <a class="waves-effect waves-light btn custom-btn submit" title="Submit" (click)='applyAppraiseeForm(comments)'>Apply</a>
+                                <a class="waves-effect waves-light btn custom-btn submit" [class.disabled]="isPromotion==true && promotionFor==''" title="Submit" (click)='applyAppraiseeForm(comments)'>Apply</a>
                             </div>
                             <div class="col s12 m12 l6 right-align" *ngIf="isApplied">
                                 <a href="#" class="waves-effect waves-light btn custom-btn cancel" title="Cancel">Cancel</a>
