--- a/src/app/modules/approvals/appraisal/appraisal.approval.html
+++ b/src/app/modules/approvals/appraisal/appraisal.approval.html
@@ -20,10 +20,10 @@
                             <a routerLink="/approvals/appraisal/history" routerLinkActive="router-link-active">Appraisal HISTORY</a>
                         </li>
                         <li class="tab col s3">
-                            <a>One-To-One</a>
+                            <a routerLink="/approvals/appraisal/onetoone" routerLinkActive="router-link-active">One-To-One</a>
                         </li>
                         <li class="tab col s3">
-                            <a>One-To-One HISTORY</a>
+                            <a routerLink="/approvals/appraisal/onetoonehistory" routerLinkActive="router-link-active">One-To-One HISTORY</a>
                         </li>
                     </ul>
                 </div>
