--- a/src/app/modules/appraisals/appraise.final.component.html
+++ b/src/app/modules/appraisals/appraise.final.component.html
@@ -122,7 +122,7 @@
                     <div class="card-footer padding-15-0 top-divider">
                         <div class="row valign-wrapper margin-zero">
                             <div class="col s12 m12 l6 right-align">
-                                <a class="waves-effect waves-light btn custom-btn cancel" title="Cancel">Back</a>
+                                <a class="waves-effect waves-light btn custom-btn cancel" (click)="backClicked()" title="Cancel">Back</a>
                             </div>
                         </div>
                     </div>
