--- a/src/app/modules/appraisals/onetoone.component.html
+++ b/src/app/modules/appraisals/onetoone.component.html
@@ -119,6 +119,7 @@
                     <div class="card-footer padding-15-0 top-divider">
                         <div class="row valign-wrapper margin-zero">
                             <div class="col s12 m12 l6 right-align">
+                                <a class="waves-effect waves-light btn custom-btn cancel"  (click)="backClicked()" title="Cancel">Cancel</a>
                                 <a class="waves-effect waves-light btn custom-btn submit" title="Submit" (click)='applyOneToOneForm(comments)'>Submit</a>
                             </div>
                         </div>
