--- a/src/app/modules/appraisals/reviewer.component.html
+++ b/src/app/modules/appraisals/reviewer.component.html
@@ -142,11 +142,11 @@
                     <div class="card-footer padding-15-0 top-divider">
                         <div class="row valign-wrapper margin-zero">
                             <div class="col s12 m12 l6 right-align" *ngIf="!isApplied">
-                                <a href="#" class="waves-effect waves-light btn custom-btn cancel" title="Cancel">Cancel</a>
+                                <a class="waves-effect waves-light btn custom-btn cancel"  (click)="backClicked()" title="Cancel">Cancel</a>
                                 <a class="waves-effect waves-light btn custom-btn submit" title="Submit" (click)='applyReveiwerForm(comments)'>Apply</a>
                             </div>
                             <div class="col s12 m12 l6 right-align" *ngIf="isApplied">
-                                <a href="#" class="waves-effect waves-light btn custom-btn cancel" title="Cancel">Cancel</a>
+                                <a class="waves-effect waves-light btn custom-btn cancel"  (click)="backClicked()" title="Cancel">Cancel</a>
                                 <a class="waves-effect waves-light btn custom-btn submit" title="Submit" (click)='submitReveiwerForm()'>Submit</a>
                             </div>
                         </div>
