--- a/src/app/modules/appraisals/appraiser.component.html
+++ b/src/app/modules/appraisals/appraiser.component.html
@@ -4,8 +4,6 @@
             <h5>Appraisal
                 <a href="vibrant_web_help/help-landing-page.html" target="_blank" title="Help" class="help-btn">
                     <i class="right fa fa-question-circle" aria-hidden="true"></i></a>
-                <a href="approvals-reviewer-rating.html" target="_blank" title="Reviewer" class="help-btn">
-                    <i class="right fa fa-dot-circle-o" aria-hidden="true"></i></a>
             </h5>
         </div>
     </div>
@@ -42,6 +40,18 @@
                                             <div class="app">One-To-One<br> {{appraiseeDetails.appraiserName}} </div>
                                         </div>
                                     </div>
+                                    <div class="col l1" *ngIf="appraiseeDetails.appraiserName==appraiseeDetails.reviewerName">
+                                            <div class="hexagon1">
+                                                <select materialize="material_select" [(ngModel)]="finalAverageRating" class="average-rating">
+                                                    <option value="" disabled="" selected="">Select</option>
+                                                    <option value="1">1</option>
+                                                    <option value="2">2</option>
+                                                    <option value="3">3</option>
+                                                    <option value="4">4</option>
+                                                    <option value="5">5</option>
+                                                </select>
+                                            </div>
+                                        </div>
                                 </div>
                                 <div class="col s10 m10 l10 offset-l1">
                                     <div class="row content-rater">
@@ -121,11 +131,11 @@
                     <div class="card-footer padding-15-0 top-divider">
                         <div class="row valign-wrapper margin-zero">
                             <div class="col s12 m12 l6 right-align" *ngIf="!isApplied">
-                                <a href="#" class="waves-effect waves-light btn custom-btn cancel" title="Cancel">Cancel</a>
+                                <a class="waves-effect waves-light btn custom-btn cancel" (click)="backClicked()" title="Cancel">Cancel</a>
                                 <a class="waves-effect waves-light btn custom-btn submit" [class.disabled]="isPromotion==true && promotionFor==''" title="Submit" (click)='applyAppraiseeForm(comments)'>Apply</a>
                             </div>
                             <div class="col s12 m12 l6 right-align" *ngIf="isApplied">
-                                <a href="#" class="waves-effect waves-light btn custom-btn cancel" title="Cancel">Cancel</a>
+                                <a class="waves-effect waves-light btn custom-btn cancel" (click)="backClicked()" title="Cancel">Cancel</a>
                                 <a class="waves-effect waves-light btn custom-btn submit" title="Submit" (click)='submitAppraiseeForm()'>Submit</a>
                             </div>
                         </div>
