--- a/src/app/modules/travel/travel.approval.history.view.template.html
+++ b/src/app/modules/travel/travel.approval.history.view.template.html
@@ -493,7 +493,7 @@
                                                             <div class="col s12 l6 comments-section">
                                                                 <div class="">
                                                                     <h5 class="margin-zero p-left10">Comments</h5>
-                                                                    <div class="comments-scrollable">
+                                                                    <div class="comments-flight-scrollable">
                                                                         <div class="row m-top10">
                                                                             <div class="col s12">
                                                                                 <div class="user-comments right-arrow">
@@ -1102,7 +1102,7 @@
                                                                     </td>
                                                                 </tr>
                                                             </tbody>
-                                                            <tfoot class="top-divider">
+                                                            <!--<tfoot class="top-divider">
                                                                 <tr>
                                                                     <td class="col-width-20"></td>
                                                                     <td class="col-width-20 right-align">Total:</td>
@@ -1111,7 +1111,7 @@
                                                                         Wire:
                                                                         <span aria-hidden="true" class="fa fa-{{currencyId|currency}} currency-symbol"> {{wireAmount}}</span></td>
                                                                 </tr>
-                                                            </tfoot>
+                                                            </tfoot>-->
                                                         </table>
                                                     </div>
                                                 </div>
