--- a/src/app/modules/travel/travel.new.template.html
+++ b/src/app/modules/travel/travel.new.template.html
@@ -254,7 +254,7 @@
                                             <div class="row margin-zero">
                                                 <div class="custom-input-field input-field col s12">
                                                     <h6>Client Contact Number</h6>
-                                                    <input type="text" pattern="\d*" maxlength="10" required="required" name="contactNumber" #contactNumber="ngModel" [(ngModel)]="clientInformationModel.contactNumber" [ngClass]="{borderbottom: !contactNumber.valid && formSubmitted}" >
+                                                    <input type="text" pattern="\d*" maxlength="10" minlength="10" required="required" name="contactNumber" #contactNumber="ngModel" [(ngModel)]="clientInformationModel.contactNumber" [ngClass]="{borderbottom: !contactNumber.valid && formSubmitted}" >
                                                     <div *ngIf="formSubmitted && !contactNumber.valid" class="alert alert-danger">Client Contact Number is required </div>
                                                 </div>
                                             </div>
