--- a/src/app/modules/travel/travel.new.template.html
+++ b/src/app/modules/travel/travel.new.template.html
@@ -268,7 +268,7 @@
                                             <div class="row margin-zero">
                                                 <div class="custom-input-field input-field col s12">
                                                     <h6>Client Email Id</h6>
-                                                    <input type="text" maxlength="50" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required="required" name="emailId" #emailId="ngModel" [(ngModel)]="clientInformationModel.emailId" [ngClass]="{borderbottom: !emailId.valid && formSubmitted}" >
+                                                    <input type="text" maxlength="50" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$" required="required" name="emailId" #emailId="ngModel" [(ngModel)]="clientInformationModel.emailId" [ngClass]="{borderbottom: !emailId.valid && formSubmitted}" >
                                                     <div *ngIf="formSubmitted && !emailId.valid" class="alert alert-danger">Valid email-id is required.</div>
                                                 </div>
                                             </div>
